<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:layout_weight="0"
    android:background="@drawable/bg">

    <include
        layout="@layout/toolbar"
        android:id="@+id/defaultToolbar"/>

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:hint="email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/coolvetica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/coolvetica"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <EditText
        android:id="@+id/etConfirm"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="confirm"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/coolvetica"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/coolvetica"
        android:text="register"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirm"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>